# internet-site-for-training

./: Makefile  docker-compose.yml  readme.md
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  readme  readme.md
backend/alembic/: env.py
backend/alembic/versions/: 05b171d238f5_add_data.py  0c97ca86a7d8_add_data.py  2b105d230837_user.py  306e0cd10469_database_creaction.py  361f5649ebb9_init_models.py  3b9e266a49be_creact_tables.py  65d1482d0a69_add_relationship_of_tables.py  7043c3c3997c_add_data.py  b9dd478211d7_add_data.py  e9c74dce1f0b_add_data.py
backend/model/: model.py
backend/scr/: __init__.py
backend/scr/apps/schema/get/: schema.py
backend/scr/apps/service/: router.py
backend/scr/settings/: test_data.py
backend/src/apps/: model.py  schema.py  utils.py
backend/src/apps/service/: router.py
backend/src/apps/service/model/: model.py
backend/src/apps/service/schema/get/: schema.py
backend/src/settings/: const.py  db.py
frontend/: .env  Dockerfile  openapi-codegen.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/_components/: footer.tsx  header.tsx
frontend/src/app/login/: page.tsx
frontend/src/queries/: openApIComponents.ts  openApIContext.ts  openApIFetcher.ts  openApISchemas.ts  providers.tsx
frontend/src/store/: user.ts
frontend/src/utils/: hooks.ts
nginx/: nginx.conf
technical_specification/: general_requirements.md  glossary.md  site_pages.md  stack.md
(+8 files in other folders)
